# hpt_converter

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml
src/: csv2parquet.py
src/hpt_converter/: csv2parquet.py
src/hpt_converter/lib/csv/: utils.py
src/hpt_converter/lib/schema/abstract/v1/: README.md  __init__.py  general_data_elements.py  payer_plan.py  standard_charge.py
src/hpt_converter/lib/schema/abtract/: README.md
src/hpt_converter/lib/schema/abtract/v1/: standard_charge.py
src/hpt_converter/lib/schema/csv/: __init__.py
src/hpt_converter/lib/schema/csv/v2/: standard_charge.py
src/hpt_converter/lib/schema/json/: README.md
src/hpt_converter/lib/schema/json/v2/: hpt.py
src/tools/: make_schema_readme.py
tests/: conftest.py
tests/data/csv/: jm_10000.csv  wide_v2.csv
tests/unit/: common.py  test_csv2parquet.py
tests/unit/lib/csv/: test_utils.py
tests/unit/lib/csv/data/: missing.csv
tests/unit/lib/schema/abstract/v1/: test_general_data_elements.py  test_payer_plan.py  test_standard_charge.py
tests/unit/lib/schema/json/v2/: test_hpt.py
tests/unit/snapshots/csv2parquet/jm_10000/: general_data_elements.parquet  payer_plans.parquet  standard_charges.parquet
tests/unit/snapshots/csv2parquet/tall/: standard_charges.parquet
tests/unit/snapshots/csv2parquet/tall_v2/: general_data_elements.parquet  payer_plans.parquet  standard_charges.parquet
tests/unit/snapshots/csv2parquet/wide/: payer_plans.parquet  standard_charges.parquet
tests/unit/snapshots/csv2parquet/wide_v2/: standard_charges.parquet
